feat:view album
