# src/api/index.ts
@@ -13,7 +13,9 @@ export type { AuthorLink } from './models/AuthorLink';
 export type { BasicClient } from './models/BasicClient';
 export type { Client } from './models/Client';
 export type { CreatePlaylistRequest } from './models/CreatePlaylistRequest';
+export type { LimitParam } from './models/LimitParam';
 export type { LoginRequest } from './models/LoginRequest';
+export type { PageParam } from './models/PageParam';
 export type { Playlist } from './models/Playlist';
 export type { PlaylistSong } from './models/PlaylistSong';
 export type { PublishSongRequest } from './models/PublishSongRequest';
